2019-06-12  Florian Weimer  <fweimer@redhat.com>

	[BZ #24632]
	* libio/libioP.h (_IO_JUMPS_FUNC_UPDATE): New macro.
	* libio/freopen.c (freopen): Use it.

2019-06-12  Florian Weimer  <fweimer@redhat.com>

	Linux: Deprecate sysctl.
	* include/sysctl.h (__sysctl): Remove declaration.
	* scripts/check-installed-headers.sh (sys/sysctl.h): Disable
	check.
	* sysdeps/unix/sysv/linux/sys/sysctl.h: Add deprecation warning.
	(sysctl): Add deprecation attribute.
	* sysdeps/unix/sysv/linux/sysctl.c: Include <linux/sysctl.h>
	directly, to avoid the deprecation warning.  Do not include
	<string.h>.
	(__sysctl): Remove hidden alias.

2019-06-12  Florian Weimer  <fweimer@redhat.com>

	Linux: Use kernel headers for statx definitions if available.
	* include/bits/statx-generic.h: New file.
	* include/bits/types/struct_statx.h: Likewise.
	* include/bits/types/struct_statx_timestamp.h: Likewise.
	* io/Makefile (headers): Add bits/statx-generic.h.
	* io/bits/statx-generic.h: New file.  Partly copied from
	io/bits/statx.h.
	* io/statx_generic.c: Include <bits/types/struct_statx.h> to
	define original_statx.
	* io/bits/types/struct_statx.h: Likewise.
	* io/bits/types/struct_statx_timestamp.h: Likewise.
	(statx_generic): Use original_statx.
	* io/bits/statx.h: Rewrite to include <bits/statx-generic.h>.
	* sysdeps/unix/sysv/linux/bits/statx.h: New file.

2019-06-12  Florian Weimer  <fweimer@redhat.com>

	* misc/sys/cdefs.h (__glibc_has_include): Define.

2019-06-12  Wilco Dijkstra  <wdijkstr@arm.com>

	* string/memmem.c (__memmem): Rewrite to improve performance.

2019-06-12  Wilco Dijkstra  <wdijkstr@arm.com>

	* string/str-two-way.h (two_way_short_needle): Add inline to avoid
	warning.
	(two_way_long_needle): Block inlining.
	* string/strstr.c (strstr2): Add new function.
	(strstr3): Likewise.
	(STRSTR): Completely rewrite strstr to improve performance.

2019-06-11  Wilco Dijkstra  <wdijkstr@arm.com>

	* benchtests/bench-strstr.c (test_hard_needle): New function.
